Implementing device registration

--- a/config.json
+++ b/config.json
@@ -1,9 +1,5 @@
 {
-  "device_provisioning": {
-    "sigfox": {
-      "network_server": "",
-      "user": "",
-      "password": ""
-    }
+  "sigfox": {
+    "network_server": ""
   }
 }
