--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/express": "^4.11.1"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^0.18.0",
     "dojot-iotagent": "https://github.com/dojot/iotagent-nodejs",
     "express": "^4.16.2",
     "tsconfig": "^7.0.0",
